# gdrive-mgr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
data/: io.github.gdrive_mgr.metainfo.xml
docs/: PACKAGING.md  capture-screenshots.sh
docs/promo/: README.md  hacker-news.md  kde-discuss.md  kde-store.md  mastodon.md  pitch-email.md  reddit.md
docs/screenshots/: README.md
gdrive_mgr/: __init__.py  __main__.py  cli.py  config.py  daemon.py  drive_api.py  rclone.py  status.py  systemd_units.py
gdrive_mgr/ui/: __init__.py  about_dialog.py  account_dialog.py  browse_panel.py  conflicts_panel.py  disk_panel.py  main_window.py  share_dialog.py  status_panel.py  tray.py
packaging/: gdrive-mgr.spec
plugin/: CMakeLists.txt  GDriveOverlayPlugin.cpp  build.sh
resources/: gdrive-mgr-pin.desktop.in  io.github.gdrive_mgr.desktop.in
resources/styles/: modern.qss
