# SPDX-License-Identifier: GPL-3.0-or-later
# Copyright (C) 2026 Khalid Said

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdrive-mgr"
version = "0.1.0"
description = "A KDE-native Google Drive manager with on-demand mount, per-file/folder pinning, in-app sharing, and Dolphin overlay badges. Built on rclone."
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "Khalid Said" },
]
keywords = ["google-drive", "rclone", "kde", "plasma", "dolphin", "fuse", "cloud-storage"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Environment :: X11 Applications :: KDE",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: File Sharing",
    "Topic :: System :: Filesystems",
    "Topic :: Desktop Environment :: K Desktop Environment (KDE)",
]

dependencies = [
    "PySide6>=6.6",
    "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/KSM899/gdrive-mgr"
Issues = "https://github.com/KSM899/gdrive-mgr/issues"
Repository = "https://github.com/KSM899/gdrive-mgr"

[project.scripts]
gdrive-mgr-cli = "gdrive_mgr.cli:main"

[project.gui-scripts]
gdrive-mgr = "gdrive_mgr.__main__:main"

[tool.setuptools.packages.find]
include = ["gdrive_mgr*"]
exclude = ["plugin*", "resources*", "tests*"]

[tool.setuptools.package-data]
gdrive_mgr = ["py.typed"]
